requirements.txt file

--- a/ANN_Churn Customer/requirements.txt
+++ b/ANN_Churn Customer/requirements.txt
@@ -1,5 +1,6 @@
-numpy
-scikit-learn
-pickle
-tensorflow
-datetime
+numpy --upgrade
+scikit-learn --upgrade
+pickle --upgrade
+tensorflow --upgrade
+datetime --upgrade
+keras --upgrade
