--- a/ANN_Churn_Customer/requirements.txt
+++ b/ANN_Churn_Customer/requirements.txt
@@ -1,10 +1,10 @@
-numpy
-scikit-learn
-pickle
-tensorflow
-datetime
-keras
-pandas
-tensorboard
-streamlit
-matplotlib
+numpy --upgrade
+scikit-learn --upgrade
+pickle --upgrade
+tensorflow --upgrade
+datetime --upgrade
+keras --upgrade
+pandas --upgrade
+tensorboard --upgrade
+streamlit --upgrade
+matplotlib --upgrade
